fix contact page font spacing and sizing

--- a/contact.html
+++ b/contact.html
@@ -13,31 +13,24 @@
     <link rel="icon" href="img/fh-white.png" id="light-scheme-icon" />
     <!-- <link rel="icon" href="img/fh-black.png" id="dark-scheme-icon" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description"
-        content="Wedding Photographer + Filmmaker in North Bay, ON. Capturing visuals as timeless as your memories." />
-    <meta name="keywords"
-        content="photo, film, wedding, wedding photography, photography, filmmaking, couple photos, photos" />
+    <meta name="description" content="Wedding Photographer + Filmmaker in North Bay, ON. Capturing visuals as timeless as your memories." />
+    <meta name="keywords" content="photo, film, wedding, wedding photography, photography, filmmaking, couple photos, photos" />
 
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content="Contact - Forrest Herman - Wedding Photographer + Filmmaker" />
     <meta property="og:image" content="img/share-img-2.jpg" />
     <meta property="og:url" content="https://www.forrestherman.ca/contact" />
     <meta property="og:site_name" content="ForrestHerman.ca" />
-    <meta property="og:description"
-        content="I'm a wedding photographer and filmmaker based in North Bay, ON. Capturing moments and memories. Weddings, engagements, events." />
+    <meta property="og:description" content="I'm a wedding photographer and filmmaker based in North Bay, ON. Capturing moments and memories. Weddings, engagements, events." />
 
     <!-- Pinterest -->
     <meta name="p:domain_verify" content="c4b5730c61a16c84e09c3bbf2e419c05" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Cardo&family=DM+Serif+Display:ital@0;1&family=Fanwood+Text:ital@0;1&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap"
-        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Cardo&family=DM+Serif+Display:ital@0;1&family=Fanwood+Text:ital@0;1&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet" />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Animate.css -->
     <link rel="stylesheet" href="css/animate.css" />
@@ -116,16 +109,14 @@
             </div>
         </nav>
 
-        <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner"
-            style="background-image: url(/img/instagram_banner_2.jpg); background-position: 45% 60% !important">
+        <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image: url(/img/instagram_banner_2.jpg); background-position: 45% 60% !important">
             <div class="overlay overlay-light"></div>
             <div class="fh5co-container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center">
                         <div class="display-t">
-                            <div class="display-tc animate-box" style="vertical-align: bottom"
-                                data-animate-effect="fadeIn">
-                                <h2 class="portfolio">Get in Touch!</h2>
+                            <div class="display-tc animate-box" style="vertical-align: bottom" data-animate-effect="fadeIn">
+                                <h2 class="header-script">Get in Touch!</h2>
                                 <!-- <h2>Free HTML5 templates Made by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a></h2> -->
                             </div>
                         </div>
@@ -151,8 +142,7 @@
                             <h3>Contact Information</h3>
                             <ul>
                                 <li class="address">
-                                    <p class="accent-color"><a href="https://goo.gl/maps/WEJMCZGMTFSxvZ5Y6"
-                                            target="_blank">North Bay</a> &
+                                    <p class="accent-color"><a href="https://goo.gl/maps/WEJMCZGMTFSxvZ5Y6" target="_blank">North Bay</a> &
                                         <a href="https://goo.gl/maps/n9pwpyn9XFhgmfWq6" target="_blank">Hamilton,
                                             Ontario</a>
                                     </p>
@@ -188,52 +178,43 @@
                                 <div class="col-md-6 col-12 d-md-none">
                                     <h3>Contact Form</h3>
                                 </div>
-                                <input type="hidden" name="_subject"
-                                    value="Contact Form Submission - forrestherman.ca" />
+                                <input type="hidden" name="_subject" value="Contact Form Submission - forrestherman.ca" />
 
                                 <div class="col-md-6 inner-form-group">
                                     <label for="name1">Your Name *</label>
-                                    <input type="text" id="name1" name="Name" class="form-control"
-                                        placeholder="Your Name" required="" />
+                                    <input type="text" id="name1" name="Name" class="form-control" placeholder="Your Name" required="" />
                                 </div>
                                 <div class="col-md-6 inner-form-group">
                                     <label for="name2">Your Partner's Name</label>
-                                    <input type="text" id="name2" name="PartnerName" class="form-control"
-                                        placeholder="Your Partner's Name" />
+                                    <input type="text" id="name2" name="PartnerName" class="form-control" placeholder="Your Partner's Name" />
                                 </div>
                             </div>
 
                             <div class="row form-group">
                                 <div class="col-md-12">
                                     <label for="email">Email Address *</label>
-                                    <input type="email" id="email" name="_replyto" class="form-control"
-                                        placeholder="Your email address" required="" />
+                                    <input type="email" id="email" name="_replyto" class="form-control" placeholder="Your email address" required="" />
                                 </div>
                             </div>
 
                             <div class="row form-group">
                                 <div class="col-md-12">
                                     <label for="telephone">Phone #</label>
-                                    <input type="telephone" name="telephone" id="telephone" class="form-control"
-                                        placeholder="(444) 444-4444" />
+                                    <input type="telephone" name="telephone" id="telephone" class="form-control" placeholder="(444) 444-4444" />
                                 </div>
                             </div>
 
                             <div class="row form-group">
                                 <div class="col-md-12">
-                                    <label for="instagram">Instagram — Let's follow each other! Mine's <a
-                                            href="https://www.instagram.com/forrestherman.ca/"
-                                            target="_blank">@forrestherman.ca</a> :)</label>
-                                    <input type="text" id="instagram" name="instagram" class="form-control"
-                                        placeholder="@your-instagram-handle" />
+                                    <label for="instagram">Instagram — Let's follow each other! Mine's <a href="https://www.instagram.com/forrestherman.ca/" target="_blank">@forrestherman.ca</a> :)</label>
+                                    <input type="text" id="instagram" name="instagram" class="form-control" placeholder="@your-instagram-handle" />
                                 </div>
                             </div>
 
                             <div class="row form-group">
                                 <div class="col-md-12">
                                     <label for="date">Do you have a date in mind?</label>
-                                    <input type="text" id="date" name="date" class="form-control"
-                                        placeholder="Enter a date (DD/MM/YYYY) or a range of dates that work for you" />
+                                    <input type="text" id="date" name="date" class="form-control" placeholder="Enter a date (DD/MM/YYYY) or a range of dates that work for you" />
                                 </div>
                             </div>
 
@@ -241,8 +222,7 @@
                                 <div class="col-md-12">
                                     <label for="location">Do you have a location in mind? If not it's okay to leave
                                         blank!</label>
-                                    <input type="text" id="location" name="location" class="form-control"
-                                        placeholder="Enter location here" />
+                                    <input type="text" id="location" name="location" class="form-control" placeholder="Enter location here" />
                                 </div>
                             </div>
 
@@ -250,8 +230,7 @@
                                 <div class="col-md-12">
                                     <label for="vibe">3 words to describe the vibe. (You can also link a Pinterest mood
                                         board!)</label>
-                                    <input type="text" id="vibe" name="vibe" class="form-control"
-                                        placeholder="adventure, cozy, romantic, fairytale, summer rainstorm, polaroid, etc." />
+                                    <input type="text" id="vibe" name="vibe" class="form-control" placeholder="adventure, cozy, romantic, fairytale, summer rainstorm, polaroid, etc." />
                                 </div>
                             </div>
 
@@ -286,9 +265,7 @@
                             <div class="row form-group">
                                 <div class="col-md-12">
                                     <label for="message">Describe your request — How can I help you?</label>
-                                    <textarea type="message" id="message" name="message" cols="30" rows="4"
-                                        class="form-control"
-                                        placeholder="The more details the better. How can I serve you?"></textarea>
+                                    <textarea type="message" id="message" name="message" cols="30" rows="4" class="form-control" placeholder="The more details the better. How can I serve you?"></textarea>
                                 </div>
                             </div>
 
@@ -311,8 +288,7 @@
                                 <div class="col-md-12">
                                     <label for="referral">If selected 'Referral' or 'Other' above, please specify who or
                                         what. Thanks!</label>
-                                    <input type="text" id="referral" name="referral" class="form-control"
-                                        placeholder="Name of person who referred you to me or other source" />
+                                    <input type="text" id="referral" name="referral" class="form-control" placeholder="Name of person who referred you to me or other source" />
                                 </div>
                             </div>
 
