--- a/photos.html
+++ b/photos.html
@@ -135,62 +135,82 @@
                 <div class="row gallery">
                     <div class="wrapper-gallery">
                         <div class="portfolio-img-container animate-box"><img src="/img/portrait_013.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/portrait_014.jpg" alt="" /></div>
                         <div class="portfolio-img-container animate-box"><img src="/img/portrait_004.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-box"><img src="/img/portrait_014.jpg" alt="" /></div>
+
                         <div class="portfolio-img-container animate-box"><img src="/img/portrait_031.jpg" alt="" /></div>
                         <div class="portfolio-img-container animate-box"><img src="/img/portrait_030.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/portrait_032.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-box"><img src="/img/portrait_033.jpg" alt="" /></div>
+
                         <div class="portfolio-img-container animate-box"><img src="/img/portrait_001.jpg" alt="" /></div>
                         <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_084.jpg" alt="" /></div>
                         <div class="portfolio-img-container animate-box"><img src="/img/portrait_018.jpg" alt="" /></div>
+
                         <div class="portfolio-img-container animate-box"><img src="/img/landscape_014.jpg" alt="" /></div>
                         <div class="portfolio-img-container animate-box"><img src="/img/landscape_010.jpg" alt="" /></div>
                         <div class="portfolio-img-container animate-box"><img src="/img/landscape_018.jpg" alt="" /></div>
+
                         <div class="portfolio-img-container animate-box"><img src="/img/portrait_021.jpg" alt="" /></div>
                         <div class="portfolio-img-container animate-box"><img src="/img/portrait_005.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/portrait_007.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/portrait_009.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-box"><img src="/img/portrait_032.jpg" alt="" /></div>
+
+                        <!-- 6 -->
+                        <div class="portfolio-img-container animate-box"><img src="/img/portrait_002.jpg" alt="" /></div>
                         <div class="portfolio-img-container animate-box"><img src="/img/portrait_029.jpg" alt="" /></div>
                         <div class="portfolio-img-container animate-box"><img src="/img/portrait_023.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_059.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/portrait_008.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/portrait_025.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/portrait_024.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/portrait_019.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_075.jpg" alt="" /></div>
+
                         <div class="portfolio-img-container animate-box"><img src="/img/landscape_004.jpg" alt="" /></div>
                         <div class="portfolio-img-container animate-box"><img src="/img/landscape_003.jpg" alt="" /></div>
                         <div class="portfolio-img-container animate-box"><img src="/img/landscape_001.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_060.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/portrait_002.jpg" alt="" /></div>
+
+                        <div class="portfolio-img-container animate-box"><img src="/img/portrait_024.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-box"><img src="/img/portrait_019.jpg" alt="" /></div>
                         <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_061.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_013.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_072.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/portrait_003.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_065.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_042.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/Event_Mel_Wedding_001.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_010.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_009.jpg" alt="" /></div>
+
                         <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_011.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_030.jpg" alt="" /></div>
                         <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_027.jpg" alt="" /></div>
                         <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_053.jpg" alt="" /></div>
+
+                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_075.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_013.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-box"><img src="/img/portrait_003.jpg" alt="" /></div>
+
+                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_045.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_009.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-box"><img src="/img/Event_Mel_Wedding_001.jpg" alt="" /></div>
+
+                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_035.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_072.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_065.jpg" alt="" /></div>
+
+                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_042.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_060.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_030.jpg" alt="" /></div>
+
+                        <!-- landscapes -->
                         <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_036.jpg" alt="" /></div>
                         <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_034.jpg" alt="" /></div>
                         <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_038.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_035.jpg" alt="" /></div>
+
+                        <!-- horse -->
+                        <div class="portfolio-img-container animate-box"><img src="/img/portrait_008.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-box"><img src="/img/portrait_009.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-box"><img src="/img/portrait_007.jpg" alt="" /></div>
+
                         <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_043.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_028.jpg" alt="" /></div>
-
-                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_045.jpg" alt="" /></div>
                         <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_037.jpg" alt="" /></div>
-                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_031.jpg" alt="" /></div>
+                        <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_010.jpg" alt="" /></div>
+
                         <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_048.jpg" alt="" /></div>
-
                         <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_047.jpg" alt="" /></div>
-
                         <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_051.jpg" alt="" /></div>
+
+                        <!-- Extras -->
+                        <!-- <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_031.jpg" alt="" /></div> -->
+                        <!-- <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_059.jpg" alt="" /></div> -->
+                        <!-- <div class="portfolio-img-container animate-box"><img src="/img/portrait_025.jpg" alt="" /></div> -->
+                        <!-- <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_028.jpg" alt="" /></div> -->
+
                     </div>
 
 
