update gallery animation

--- a/portraits-solo.html
+++ b/portraits-solo.html
@@ -132,16 +132,16 @@
 
                 <div class="container">
                     <div class="row gallery">
-                        <div class="wrapper-gallery animate-box">
-                            <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_006.jpg" alt="" /></div>
-                            <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_005.jpg" alt="" /></div>
-                            <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_085.jpg" alt="" /></div>
-                            <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_016.jpg" alt="" /></div>
-                            <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_008.jpg" alt="" /></div>
-                            <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_004.jpg" alt="" /></div>
-                            <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_058.jpg" alt="" /></div>
-                            <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_017.jpg" alt="" /></div>
-                            <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_002.jpg" alt="" /></div>
+                        <div class="wrapper-gallery">
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_006.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_005.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_085.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_016.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_008.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_004.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_058.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_017.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_002.jpg" alt="" /></div>
                         </div>
                     </div>
 
