pricing guide update

--- a/pricing/wedding-pricing.html
+++ b/pricing/wedding-pricing.html
@@ -9,13 +9,9 @@
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Cardo&family=DM+Serif+Display:ital@0;1&family=Fanwood+Text:ital@0;1&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap"
-        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Cardo&family=DM+Serif+Display:ital@0;1&family=Fanwood+Text:ital@0;1&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet" />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Animate.css -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css"/> -->
@@ -42,11 +38,75 @@
 
 <body>
     <div id="page">
-        <div class="container">
-            <div class="row fh5co-section">
-                <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                    <span>Wedding</span>
+        <div class="container pricing-page">
+            <div class="row gallery pricing-gallery">
+                <div class="wrapper-gallery">
+                    <div class="portfolio-img-container animate-gallery"><img src="/img/portrait_013.jpg" alt="" /></div>
+                    <div class="portfolio-img-container animate-gallery"><img src="/img/portrait_004.jpg" alt="" /></div>
+                    <div class="portfolio-img-container animate-gallery"><img src="/img/portrait_014.jpg" alt="" /></div>
+                </div>
+            </div>
+            <div class="row pricing-offset">
+                <div class="text-center pricing-offset-text">
+                    <span class="fh-styled highlight-text">Wedding</span>
                     <h2 class="portfolio">Pricing Guide</h2>
+                </div>
+            </div>
+            <div class="row display-flex-row pricing-packages text-center">
+                <div class="package col-sm-4">
+                    <h3 class="package-title">Premium</h3>
+                    <hr>
+                    <h4 class="package-price">$2100</h4>
+                    <p>10 hours <br>
+                        full day’s coverage <br>
+                        1000+ edited photos <br>
+                        + 1h engagement session</p>
+                </div>
+                <div class="package col-sm-4">
+                    <h3 class="package-title">Deluxe</h3>
+                    <hr>
+                    <h4 class="package-price">$1900</h4>
+                    <p>8 hours <br>
+                        limited full day coverage <br>
+                        750+ edited photos <br>
+                        + 30min engagement session</p>
+                </div>
+                <div class="package col-sm-4">
+                    <h3 class="package-title">Essential</h3>
+                    <hr>
+                    <h4 class="package-price">$1400</h4>
+                    <p>
+                        5 hours coverage <br>
+                        ceremony and reception <br>
+                        500+ edited photos
+                    </p>
+                </div>
+                <div class="package col-sm-4">
+                    <h3 class="package-title">Basic</h3>
+                    <hr>
+                    <h4 class="package-price">$900</h4>
+                    <p>
+                        3 hours coverage <br>
+                        ceremony & wedding party <br>
+                        200+ edited photos
+                    </p>
+                </div>
+            </div>
+            <hr>
+            <p class="packages-subtitle text-center">
+                All packages include an online gallery and an unlimited print release. Prices subject to change.
+            </p>
+            <div class="row flex-row text-center pricing-page-footer">
+                <div class="col-md-4 margin-auto">
+                    <h4 style="margin: 0">Photographer</h4>
+                </div>
+                <div class="col-md-4 footer-logo img-container display-flex-row justify-center">
+                    <a href="index">
+                        <img id="footer-logo" src="/img/forrest-herman-black.png" alt="logo" />
+                    </a>
+                </div>
+                <div class="col-md-4 margin-auto">
+                    <h4 style="margin: 0">Filmmaker</h4>
                 </div>
             </div>
         </div>
