--- a/pricing/wedding-pricing.html
+++ b/pricing/wedding-pricing.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wedding Pricing - Forrest Herman - Wedding Photographer + Filmmaker</title>
+    <link rel="icon" href="img/fh-white.png" id="light-scheme-icon" />
+
+
     <!-- Theme style  -->
 
     <!-- Fonts -->
