delete img and add new img to portraits-solo

--- a/portraits-solo.html
+++ b/portraits-solo.html
@@ -139,9 +139,12 @@
                             <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_016.jpg" alt="" /></div>
                             <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_008.jpg" alt="" /></div>
                             <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_004.jpg" alt="" /></div>
-                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_058.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/concert_001.jpg" alt="" /></div>
                             <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_017.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/concert_002.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_058.jpg" alt="" /></div>
                             <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_002.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_086.jpg" alt="" /></div>
                         </div>
                     </div>
 
