update concert photos and portfolio

--- a/concerts.html
+++ b/concerts.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Photos - Forrest Herman - Wedding Photographer + Filmmaker</title>
+    <title>Concert Photos - Forrest Herman - Photographer + Filmmaker</title>
     <link rel="icon" href="img/fh-white.png" id="light-scheme-icon" />
     <!-- <link rel="icon" href="img/fh-black.png" id="dark-scheme-icon" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -17,7 +17,7 @@
     <meta name="keywords" content="photo, film, wedding, wedding photography, photography, filmmaking, couple photos, photos" />
 
     <!-- Facebook and Twitter integration -->
-    <meta property="og:title" content="Photos - Forrest Herman - Wedding Photographer + Filmmaker" />
+    <meta property="og:title" content="Concert Photos - Forrest Herman - Photographer + Filmmaker" />
     <meta property="og:image" content="img/share-img-2.jpg" />
     <meta property="og:url" content="https://www.forrestherman.ca/" />
     <meta property="og:site_name" content="ForrestHerman.ca" />
@@ -122,48 +122,34 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                        <span>Individual Portraits</span>
+                        <span>Concerts Photos</span>
                         <h2 class="portfolio">Portfolio</h2>
-                        <!-- <p>
-                                Here are some images.
-                            </p> -->
                     </div>
                 </div>
 
                 <div class="container">
                     <div class="row gallery">
                         <div class="wrapper-gallery">
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/concert_010.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/concert_004.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/concert_006.jpg" alt="" /></div>
 
-                            <div class="portfolio-img-container animate-gallery"><img src="/img/solo-portrait_004.jpg" alt="" /></div>
-                            <div class="portfolio-img-container animate-gallery"><img src="/img/solo-portrait_003.jpg" alt="" /></div>
-                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_006.jpg" alt="" /></div>
-
-                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_005.jpg" alt="" /></div>
-                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_085.jpg" alt="" /></div>
-
-                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_016.jpg" alt="" /></div>
-
-                            <div class="portfolio-img-container animate-gallery"><img src="/img/solo-portrait_001.jpg" alt="" /></div>
-                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_004.jpg" alt="" /></div>
-                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_008.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/concert_001.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/concert_008.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/concert_007.jpg" alt="" /></div>
 
 
-                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_086.jpg" alt="" /></div>
-                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_017.jpg" alt="" /></div>
-                            <div class="portfolio-img-container animate-gallery"><img src="/img/solo-portrait_002.jpg" alt="" /></div>
-
-                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_058.jpg" alt="" /></div>
-                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_021.jpg" alt="" /></div>
-                            <div class="portfolio-img-container animate-gallery"><img src="/img/Portfolio_002.jpg" alt="" /></div>
-
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/concert_009.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/concert_005.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-gallery"><img src="/img/concert_002.jpg" alt="" /></div>
                         </div>
                     </div>
 
-                    <div class="row gallery">
+                    <!-- <div class="row gallery">
                         <div class="wrapper-col animate-box">
                             <div class="portfolio-img-container"><img src="/img/solo-portrait_L_002.jpg" alt="" /></div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -176,7 +162,6 @@
                 <div class="btn-container btn-border-black justify-center">
                     <a class="btn margin-right-left-10" href="photos">Weddings and Couples</a>
                     <a class="btn margin-right-left-10" href="contact">Let's Chat!</a>
-                    <a class="btn margin-right-left-10" href="concerts">Check out my concert photos</a>
                     <!-- <a class="btn margin-right-left-10" href="landscapes">Check out my landscapes</a> -->
                 </div>
                 <!-- <p>
