--- a/index.html
+++ b/index.html
@@ -120,12 +120,13 @@
                             <li>
                                 <a href="films">Films</a>
                             </li>
-                            <li class="has-dropdown">
+                            <li>
+                                <!-- <li class="has-dropdown"> -->
                                 <a href="offerings">Offerings</a>
-                                <ul class="dropdown">
+                                <!-- <ul class="dropdown">
                                     <li><a href="offerings">Photos</a></li>
                                     <li><a href="#">Films</a></li>
-                                </ul>
+                                </ul> -->
                             </li>
                             <li><a href="contact">Contact</a></li>
                         </ul>
