--- a/photos.html
+++ b/photos.html
@@ -97,8 +97,13 @@
                         <ul id="nav-menu" class="nav-menu">
                             <li class="hidden-on-mobile"><a href="index">Home</a></li>
                             <li><a href="about">Hello</a></li>
-                            <li>
+                            <li class="has-dropdown">
                                 <a href="photos">Photos</a>
+                                <ul class="dropdown">
+                                    <li><a href="photos">Wedding & Couple</a></li>
+                                    <li><a href="portraits-solo">Individual Portraits</a></li>
+                                    <li><a href="concerts">Concerts</a></li>
+                                </ul>
                             </li>
                             <li>
                                 <a href="films">Films</a>
